welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:3: error: missing arguments for method & in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if(cigars <= 60 & cigars >= 40 & isWeekend = false)
                                       ^cigarParty:8: error: missing arguments for method & in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if( cigars >= 40 & isWeekend = true)
                         ^